# openvino-with-fpga-hello-world-face-detection

./: README.md  dx_face_detection.tgz
dx_face_detection/: CMakeLists.txt  README  face_detection.hpp  main.cpp  new.sh  run_fd.sh
dx_face_detection/cmake/: CMakeLists_common.cmake
